<resources>
    <string name="app_name">Books App</string>
    <string name='Name'>Name</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="signuptext">Don\'t have account? Sign up</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="createmyac">Create My Account</string>
    <string name="logintext">If you already have an account click here.</string>
    <string name="loginpage">Login</string>
    <string name="signuppage">Sign Up</string>
    <string name="Welcome">Welcome</string>
    <string name="wecomepageto">To</string>
    <string name="Kyōzai">Kyōzai</string>
    <string name="profile">Profile</string>
    <string name="Emailidprofile">E-mail id</string>
    <string name="mobno">Mobile no</string>
    <string name="Addressprofile">Address</string>
    <string name="college">College</string>
    <string name="dobprofile">DOB</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="contactus">Contact us</string>
    <string name="submitbutton">Submit</string>
    <string name="requestabook">Request a Book</string>
    <string name="Bookname">Book Name</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="edition">Edition</string>
    <string name="addrequest">Add Request</string>
</resources>

